# flora

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: nightly.yml  release.yml  rust.yml
crates/flora/: Cargo.toml
crates/flora/src/: app.rs  config.rs  desktop.rs  dirs.rs  errors.rs  lib.rs  manager.rs  requests.rs  responses.rs  seed.rs  winepath.rs
crates/flora/src/runners/: mod.rs  proton.rs  wine.rs
crates/flora_cli/: Cargo.toml  README.md
crates/flora_cli/src/: main.rs
crates/flora_icon/: Cargo.toml
crates/flora_icon/src/: lib.rs
src/flora_cli/: Cargo.toml
src/flora_cli/src/: main.rs
src/flora_core/: Cargo.toml
src/flora_core/src/: config.rs  desktop.rs  errors.rs  lib.rs  manager.rs  seed.rs  start_menu.rs
src/flora_core/src/runners/: mod.rs  proton.rs  wine.rs
src/flora_icon/: Cargo.toml
src/flora_icon/src/: lib.rs
src/flora_server/: Cargo.toml  build.rs
src/flora_server/proto/: flora.proto
src/flora_server/src/: main.rs  proto.rs  service.rs
