[workspace]
resolver = "2"
members = [ "src/flora_core", "src/flora_cli", "src/flora_icon"]

[workspace.package]
authors = ["Damillora"]
documentation = "https://flora.nanao.moe"
homepage = "https://flora.nanao.moe"
repository = "https://github.com/Damillora/flora"
license = "GPL-3.0-or-later"


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
