[package]
name = "flora"
version = "0.1.0"
edition = "2024"

authors = ["Damillora <developer@damillora.com>"]
description = "A seed for your Wine prefixes - Core engine"
homepage = "https://flora.nanao.moe"
repository = "https://github.com/Damillora/flora"
license = "GPL-3.0-or-later"

[dependencies]
directories = "6.0.0"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.5", features = ["serde"] }
whoami = "1.6.1"
walkdir = "2"
flora_icon = { version = "0.1.0", path = "../flora_icon" }
typed-path = "0.11.0"
