[package]
name = "flora"
description = "A seed for your Wine prefixes - Core engine"
version = "0.2.0"
edition = "2024"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
directories = "6.0.0"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.5", features = ["serde"] }
whoami = "1.6.1"
walkdir = "2"
flora_icon = { version = "0.2.0", path = "../flora_icon" }
typed-path = "0.12.0"
shlex = "1.3.0"
