[package]
name = "flora_cli"
description = "A seed for your Wine prefixes - CLI interface"
version = "0.3.0"
edition = "2024"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "flora"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
flora = { version = "0.3.0", path = "../flora" }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
tabled = "0.20.0"
toml = { version = "1.0.7", features = ["serde"] }
