[package]
name = "flora_icon"
description = "A seed for your Wine prefixes - Icon helper library"
version = "0.2.0"
edition = "2024"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ico = "0.4.0"
infer = "0.19.0"
lnk = "0.6.3"
log = "0.4.28"
pelite = "0.10.0"
xdg-mime = "0.4.0"
