[package]
name = "flora_server"
version = "0.1.0"
edition = "2024"
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
flora_core = { version = "0.3.0", path = "../flora_core" }
prost = "0.14.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"

[build-dependencies]
tonic-prost-build = "0.14.6"
