[package]
name = "flora_server"
version = "0.1.0"
edition = "2024"
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
directories = "6.0.0"
flora_core = { version = "0.3.0", path = "../flora_core" }
log = "0.4.33"
prost = "0.14.4"
shlex = "2.0.1"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing-subscriber = "0.3.23"

[build-dependencies]
tonic-prost-build = "0.14.6"
